# sample_contract

./: .gitmodules  CMakeLists.txt  README.md  project.yml
apps/: CMakeLists.txt  sample.cpp
include/: core.hpp  sample.hpp  something.h
libs/: CMakeLists.txt  core.cpp  something.c
